<resources>
    <string name="app_name">PatientsLikeMe</string>
    <string name="title_home">Home</string>
    <string name="title_community">Community</string>
    <string name="title_my_health">My Health</string>
    <string name="title_learning">Learning</string>
    <string name="nav_menu_following">Following</string>
    <string name="nav_menu_my_conditions">Manage my conditions</string>
    <string name="nav_menu_my_treatments">Manage my treatments</string>
    <string name="nav_menu_personal_information">Personal information</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="nav_menu_invite_others">Invite others</string>
    <string name="nav_menu_crisis_resources">Crisis resources</string>
    <string name="nav_menu_my_account">Manage my account</string>
    <string name="nav_menu_help_center">Help center</string>
    <string name="nav_menu_privacy_policy">Privacy policy</string>
    <string name="nav_menu_terms_conditions">Terms &amp; conditions</string>
    <string name="nav_menu_logout">Log out</string>
    <string name="user_name_email">Username or email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="email_details">Your email address will not be shared with anyone</string>
    <string name="username">Username</string>
    <string name="username_details">This is visible to other PatientsLikeMe members. You may want to use an anonymous name.</string>
    <string name="incorrect_username_password">Incorrect username or password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="label">Label</string>
    <string name="dob_details">You must be over 13 to join. Your date of birth is only visible to other PatientsLikeMe community members.</string>
    <string name="joining_as_caregiver">I am joining as a caregiver for someone else.</string>
    <string name="plm_terms_conditions">I agree to the PatientsLikeMe terms &amp; conditions of use and privacy policy</string>
    <string name="add_your_conditions">Add your conditions</string>
    <string name="required">required</string>
    <string name="required_bracket">(required)</string>
    <string name="optional_bracket">(optional)</string>
    <string name="adding_conditions_details">Adding conditions enables PatientsLikeMe to personalize your site experience and provide relevant information to help you take charge of your health.</string>
    <string name="add_a_conditions">Add a condition</string>
    <string name="add_a_link">Add a link</string>
    <string name="start_a_new_discussion">Start a new discussion</string>
    <string name="edit_a_conditions">Edit a condition</string>
    <string name="my_conditions">My conditions</string>
    <string name="edit_profile">Edit profile</string>
    <string name="condition">Condition</string>
    <string name="title">Title</string>
    <string name="optional">(optional)</string>
    <string name="options">Options</string>
    <string name="block_member">Block member</string>
    <string name="flag_misleading">Flag as inappropriate or misleading</string>
    <string name="tags">Tags</string>
    <string name="selected_tags">Selected Tags</string>
    <string name="recommended_tags">Recommended Tags</string>
    <string name="stage">Stage</string>
    <string name="_stage">Stage : </string>
    <string name="privacy_settings">Privacy settings</string>
    <string name="new_thread">New Thread</string>
    <string name="privacy_settings_for_symptom">Privacy settings for %1$s</string>
    <string name="hi_username">Hi %1$s!</string>
    <string name="success_privacy_settings">Privacy settings successfully update</string>
    <string name="no_stage_added">No stage added</string>
    <string name="success_personal_info_update">Personal information has been successfully updated</string>
    <string name="failed_privacy_settings">Privacy settings failed to update</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="tell_us_about_you_details">Tell us about you, so we can make helpful connections with other people like you.</string>
    <string name="biological_sex">Biological sex</string>
    <string name="please_select">Please select</string>
    <string name="zip_code">Zip code</string>
    <string name="error_zip_code">Invalid Zip code</string>
    <string name="error_profile_header">Profile header characters should be less than 160</string>
    <string name="profile_headline">Profile headline</string>
    <string name="hint_profile_headline">Add a brief bio to introduce yourself to the community.</string>
    <string name="zero_sixty_characters">0/160 characters</string>
    <string name="profile_photo">Profile photo</string>
    <string name="profile_theme_color">Profile theme color</string>
    <string name="change_photo">Change photo</string>
    <string name="create_an_account">Create an account</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_details">Please enter the email address you used when you joined. We’ll send you instructions to reset your password.</string>
    <string name="already_member_sign">Already a member? Sign in</string>
    <string name="already_member">Already a member?</string>
    <string name="fail_to_delete_condition">Failed to delete condition</string>
    <string name="looking_for_group">Looking for a specific group?</string>
    <string name="looking_for_group_hint">Start typing to see suggestions</string>
    <string name="all_groups">All groups</string>
    <string name="what_s_new">What’s New</string>
    <string name="browse_all_groups">Browse all groups</string>
    <string name="suggested_groups">Suggested groups</string>
    <string name="my_groups">My groups</string>
    <string name="join">Join</string>
    <string name="you_have_joined_this_group">You have joined this group.</string>
    <string name="undo">Undo</string>
    <string name="moderated_by">Moderated by</string>
    <string name="about_the_group">About the group</string>
    <string name="community_guidelines">Community guidelines</string>
    <string name="bar">|</string>
    <string name="group_highlights">Group highlights</string>
    <string name="new_members_n">New\nMembers</string>
    <string name="new_member_n">New\nMember</string>
    <string name="new_discussions_n">New\nDiscussions</string>
    <string name="new_discussion_n">New\nDiscussion</string>
    <string name="new_comments_n">New\nComments</string>
    <string name="new_comment_n">New\nComment</string>
    <string name="new_members">New members</string>
    <string name="top_contributors_this_week">Top contributors this week</string>
    <string name="events">Events</string>
    <string name="challenge">Challenge</string>
    <string name="you_re_in">You\’re in!</string>
    <string name="featured_discussions">Featured discussions</string>
    <string name="tags_colon">Tags:</string>
    <string name="send_a_welcome">Send a welcome</string>
    <string name="find_a_group">Find a group</string>
    <string name="find_group_prompt">To get the most out of your PatientsLikeMe experience we recommend you join a group</string>
    <string name="find_group_prompt_details">When you connect with communities of people with a shared experience, you’ll be able to find answers, emotional support, and advice tailored to your health journey.</string>
    <string name="members">Members</string>
    <string name="filters_sort">Filters, sort</string>
    <string name="looking_for_someone_specific">Looking for someone specific?</string>
    <string name="search_for_members">Search for members</string>
    <string name="members_like_me">Members like me</string>
    <string name="most_like_me_a_z">Most recent, A-Z</string>
    <string name="all_members">All members</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="send_a_message">Send a message</string>
    <string name="a_few_community_guidelines">A few community\nguidelines</string>
    <string name="guideline_header">Hi! Welcome to PatientsLikeMe. Poke around and make yourself at home. Together, we can keep this a safe, supportive, bright spot on the internet by keeping these ideals in mind.</string>
    <string name="guideline_one">Whether you call it "the golden rule" or just being a decent human, think of the other person or people behind the screen or username, with their own set of challenges, strengths and uncertainties.</string>
    <string name="guideline_two">Welcome newcomers with a quick "hello." Check in with others to make sure they\'re OK and see if they have any updates.</string>
    <string name="guideline_three">Ask questions to learn more about your condition. Share your opinion or chime into a debate in a considerate way (sticking with your reasoning, rather than making comments directed at an individual member).</string>
    <string name="guideline_four">Respect confidentiality and don\'t transmit other members\' info outside the PatientsLikeMe community.</string>
    <string name="guideline_five">Share your data and personal experiences without trying to provide medical advice. By keeping your profile up-to-date with your current conditions, symptoms, treatments and more, you can track your own health over time and give the community the most complete picture of what might help (or not) in living better today.</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="have_any_other_questions">Have any other questions?</string>
    <string name="reach_out_to_community_team">Reach out to your Community Team</string>
    <string name="related_groups">Related groups</string>
    <string name="add_a_dailyme">Add a DailyMe</string>
    <string name="read_others_stories">Read others\’ stories</string>
    <string name="details">Details</string>
    <string name="join_the_challenge">Join the challenge</string>
    <string name="add">Add</string>
    <string name="close">close</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="conditions">Conditions</string>
    <string name="hint_start_typing_to_see_suggestions"><i>Start typing to see suggestions</i></string>
    <string name="about_our_privacy_settings">About our privacy\nsettings</string>
    <string name="privacy_settings_details_1">You control what you share and what you make visible to others on the site. You can share as much or as little about yourself as you choose.</string>
    <string name="privacy_settings_details_2">Share with the community</string>
    <string name="privacy_settings_details_3">If you want all the data you enter to be viewable on the site by your fellow members</string>
    <string name="privacy_settings_details_4">Personal</string>
    <string name="privacy_settings_details_5">For the data that you don’t want viewable by anyone but yourself. (For example, you may specify one or more conditions you are tracking should be hidden from your fellow members. Note that the PatientsLikeMe team can see this data when necessary, but other PatientsLikeMe members will not see it.)</string>
    <string name="select_condition">Select condition from dropdown</string>
    <string name="filters_by_resources">Resources I’m following</string>
    <string name="filters_and_sort">Filters &amp; sort</string>
    <string name="filters_by">Filters by</string>
    <string name="filters_by_all">All</string>
</resources>