<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_bottom_nav_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_bottom_nav_community"
        android:title="@string/title_community" />

    <item
        android:id="@+id/navigation_my_health"
        android:icon="@drawable/ic_bottom_nav_my_health"
        android:title="@string/title_my_health" />

    <item
        android:id="@+id/navigation_learning"
        android:icon="@drawable/ic_bottom_nav_learning"
        android:title="@string/title_learning" />

    <item
        android:id="@+id/navigation_hidden"
        android:visible="false" />
</menu>