<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/parentLayoutColor"
        android:scrollbars="none"
        tools:context=".ui.main.view.fragment.community.groups.GroupCommunityGuidelinesFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_20dp">

            <plm.patientslikeme2.utils.usercontrol.RoundishImageView
                android:id="@+id/iv_banner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200dp"
                android:layout_margin="@dimen/_16dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/bg_community_guideline"
                app:cornerRadius="@dimen/_10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:roundedCorners="all" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/_30dp"
                android:paddingTop="@dimen/_20dp"
                android:paddingEnd="@dimen/_30dp"
                android:paddingBottom="@dimen/_30dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_banner">

                <plm.patientslikeme2.utils.usercontrol.UserTextView
                    style="@style/TextViewBold24"
                    android:text="@string/a_few_community_guidelines"
                    android:textColor="@color/teal_darker" />

                <plm.patientslikeme2.utils.usercontrol.UserTextView
                    style="@style/TextView20"
                    android:layout_marginTop="@dimen/_16dp"
                    android:text="@string/guideline_header" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16dp"
                    android:orientation="horizontal">

                    <plm.patientslikeme2.utils.usercontrol.UserTextView
                        style="@style/TextView24"
                        android:layout_width="@dimen/_35dp"
                        android:layout_height="@dimen/_35dp"
                        android:layout_marginTop="@dimen/_10dp"
                        android:background="@drawable/bg_circle_blue_dark"
                        android:gravity="center"
                        android:text="@string/_1"
                        android:textColor="@color/white" />

                    <plm.patientslikeme2.utils.usercontrol.UserTextView
                        style="@style/TextView16"
                        android:layout_marginStart="@dimen/_16dp"
                        android:text="@string/guideline_one" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16dp"
                    android:orientation="horizontal">

                    <plm.patientslikeme2.utils.usercontrol.UserTextView
                        style="@style/TextView24"
                        android:layout_width="@dimen/_35dp"
                        android:layout_height="@dimen/_35dp"
                        android:layout_marginTop="@dimen/_10dp"
                        android:background="@drawable/bg_circle_blue_dark"
                        android:gravity="center"
                        android:text="@string/_2"
                        android:textColor="@color/white" />

                    <plm.patientslikeme2.utils.usercontrol.UserTextView
                        style="@style/TextView16"
                        android:layout_marginStart="@dimen/_16dp"
                        android:text="@string/guideline_two" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16dp"
                    android:orientation="horizontal">

                    <plm.patientslikeme2.utils.usercontrol.UserTextView
                        style="@style/TextView24"
                        android:layout_width="@dimen/_35dp"
                        android:layout_height="@dimen/_35dp"
                        android:layout_marginTop="@dimen/_10dp"
                        android:background="@drawable/bg_circle_blue_dark"
                        android:gravity="center"
                        android:text="@string/_3"
                        android:textColor="@color/white" />

                    <plm.patientslikeme2.utils.usercontrol.UserTextView
                        style="@style/TextView16"
                        android:layout_marginStart="@dimen/_16dp"
                        android:text="@string/guideline_three" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16dp"
                    android:orientation="horizontal">

                    <plm.patientslikeme2.utils.usercontrol.UserTextView
                        style="@style/TextView24"
                        android:layout_width="@dimen/_35dp"
                        android:layout_height="@dimen/_35dp"
                        android:layout_marginTop="@dimen/_10dp"
                        android:background="@drawable/bg_circle_blue_dark"
                        android:gravity="center"
                        android:text="@string/_4"
                        android:textColor="@color/white" />

                    <plm.patientslikeme2.utils.usercontrol.UserTextView
                        style="@style/TextView16"
                        android:layout_marginStart="@dimen/_16dp"
                        android:text="@string/guideline_four" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16dp"
                    android:orientation="horizontal">

                    <plm.patientslikeme2.utils.usercontrol.UserTextView
                        style="@style/TextView24"
                        android:layout_width="@dimen/_35dp"
                        android:layout_height="@dimen/_35dp"
                        android:layout_marginTop="@dimen/_10dp"
                        android:background="@drawable/bg_circle_blue_dark"
                        android:gravity="center"
                        android:text="@string/_5"
                        android:textColor="@color/white" />

                    <plm.patientslikeme2.utils.usercontrol.UserTextView
                        style="@style/TextView16"
                        android:layout_marginStart="@dimen/_16dp"
                        android:text="@string/guideline_five" />
                </LinearLayout>

                <plm.patientslikeme2.utils.usercontrol.UserTextView
                    style="@style/TextView20"
                    android:layout_marginTop="@dimen/_24dp"
                    android:gravity="center"
                    android:text="@string/have_any_other_questions" />

                <plm.patientslikeme2.utils.usercontrol.UserTextView
                    android:id="@+id/tv_reach_out"
                    style="@style/TextView16"
                    android:gravity="center"
                    android:text="@string/reach_out_to_community_team"
                    android:textColor="@color/link_blue" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>