<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet_parent"
        android:paddingStart="@dimen/_16dp"
        android:paddingTop="@dimen/_16dp"
        android:paddingEnd="@dimen/_16dp"
        android:paddingBottom="@dimen/_36dp">

        <RelativeLayout
            android:id="@+id/rl_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <plm.patientslikeme2.utils.usercontrol.UserTextView
                style="@style/TextViewBold16"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/filters_and_sort" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_gravity="end"
                android:contentDescription="@null"
                android:src="@drawable/ic_close_dark_green"
                app:tint="@color/gray_dark_4" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rl_header">

            <plm.patientslikeme2.utils.usercontrol.UserTextView
                style="@style/TextViewBold16"
                android:layout_marginHorizontal="@dimen/_8dp"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/filters_by" />

            <plm.patientslikeme2.utils.usercontrol.UserCheckBox
                android:id="@+id/cb_all"
                style="@style/Checkbox"
                android:layout_marginHorizontal="@dimen/_8dp"
                android:layout_marginTop="@dimen/_6dp"
                android:gravity="start|center"
                android:paddingHorizontal="@dimen/_10dp"
                android:text="@string/filters_by_all" />

            <plm.patientslikeme2.utils.usercontrol.UserCheckBox
                android:id="@+id/cb_following"
                style="@style/Checkbox"
                android:layout_marginHorizontal="@dimen/_8dp"
                android:layout_marginTop="@dimen/_16dp"
                android:gravity="start|center"
                android:paddingHorizontal="@dimen/_10dp"
                android:text="@string/filters_by_resources" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20dp"
                android:orientation="horizontal">

                <plm.patientslikeme2.utils.usercontrol.UserButton
                    android:id="@+id/btn_apply"
                    style="@style/ButtonDarkGreen"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="@dimen/_20dp"
                    android:text="@string/apply"
                    android:textSize="@dimen/_14sp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>